web-infras/parser/tests/fixtures/babel/es2022/top-level-await-module/inside-arrow/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,7)
1|() => await 0;
 |     ^
[SyntaxError]: Missing semicolon or line terminator. (1,13)
1|() => await 0;
 |           ^
